@@ -1,5 +1,6 @@
 /**
  * Copyright (c) 2013-Now http://jeesite.com All rights reserved.
+ * No deletion without permission, or be held responsible to law.
  */
 package com.jeesite.common.reflect;
 
@@ -28,6 +29,8 @@ import java.util.jar.JarInputStream;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
+
+import com.jeesite.common.codec.EncodeUtils;
 
 /**
  * Class工具类，借鉴ibatis的io包的ResolverUtil类。
@@ -288,14 +291,12 @@ abstract class VFS {
 		for (int i = 0; vfs == null || !vfs.isValid(); i++) {
 			Class<? extends VFS> impl = impls.get(i);
 			try {
-				vfs = impl.newInstance();
+				vfs = impl.getDeclaredConstructor().newInstance();
 				if (vfs == null || !vfs.isValid()) {
 					log.debug("VFS implementation " + impl.getName() + " is not valid in this environment.");
 				}
-			} catch (InstantiationException e) {
-				log.error("Failed to instantiate " + impl, e);
-				return null;
-			} catch (IllegalAccessException e) {
+			} catch (InstantiationException | IllegalAccessException | IllegalArgumentException
+					| InvocationTargetException | NoSuchMethodException | SecurityException e) {
 				log.error("Failed to instantiate " + impl, e);
 				return null;
 			}
@@ -458,7 +459,7 @@ class DefaultVFS extends VFS {
 						// Some versions of JBoss VFS might give a JAR stream even if the resource
 						// referenced by the URL isn't actually a JAR
 						is = url.openStream();
-						@SuppressWarnings("resource")
+//						@SuppressWarnings("resource")
 						JarInputStream jarInput = new JarInputStream(is);
 						log.debug("Listing " + url);
 						for (JarEntry entry; (entry = jarInput.getNextJarEntry()) != null;) {
@@ -475,21 +476,22 @@ class DefaultVFS extends VFS {
 						 * then we assume the current resource is not a directory.
 						 */
 						is = url.openStream();
-						BufferedReader reader = new BufferedReader(new InputStreamReader(is));
-						List<String> lines = new ArrayList<String>();
-						for (String line; (line = reader.readLine()) != null;) {
-							log.debug("Reader entry: " + line);
-							lines.add(line);
-							if (getResources(path + "/" + line).isEmpty()) {
-								lines.clear();
-								break;
+						try(BufferedReader reader = new BufferedReader(new InputStreamReader(is))){
+							List<String> lines = new ArrayList<String>();
+							for (String line; (line = reader.readLine()) != null;) {
+								log.debug("Reader entry: " + line);
+								lines.add(line);
+								if (getResources(path + "/" + line).isEmpty()) {
+									lines.clear();
+									break;
+								}
 							}
-						}
-
-						if (!lines.isEmpty()) {
-							log.debug("Listing " + url);
-							children.addAll(lines);
-						}
+	
+							if (!lines.isEmpty()) {
+								log.debug("Listing " + url);
+								children.addAll(lines);
+							}
+						};
 					}
 				} catch (FileNotFoundException e) {
 					/*
@@ -621,7 +623,7 @@ class DefaultVFS extends VFS {
 				// File name might be URL-encoded
 				if (!file.exists()) {
 					try {
-						file = new File(URLEncoder.encode(jarUrl.toString(), "UTF-8"));
+						file = new File(URLEncoder.encode(jarUrl.toString(), EncodeUtils.UTF_8));
 					} catch (UnsupportedEncodingException e) {
 						throw new RuntimeException("Unsupported encoding?  UTF-8?  That's unpossible.");
 					}
