@@ -1,5 +1,6 @@
 /**
  * Copyright (c) 2013-Now http://jeesite.com All rights reserved.
+ * No deletion without permission, or be held responsible to law.
  */
 package com.jeesite.common.utils.excel;
 
@@ -8,17 +9,19 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
+import java.math.BigDecimal;
 import java.text.DecimalFormat;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.Date;
 import java.util.Iterator;
 import java.util.List;
-import java.util.Set;
+import java.util.Map;
 
-import org.apache.poi.hssf.usermodel.HSSFDateUtil;
 import org.apache.poi.hssf.usermodel.HSSFWorkbook;
 import org.apache.poi.openxml4j.exceptions.InvalidFormatException;
 import org.apache.poi.ss.formula.eval.ErrorEval;
@@ -36,8 +39,9 @@ import org.slf4j.LoggerFactory;
 import org.springframework.web.multipart.MultipartFile;
 
 import com.jeesite.common.callback.MethodCallback;
+import com.jeesite.common.codec.EncodeUtils;
 import com.jeesite.common.collect.ListUtils;
-import com.jeesite.common.collect.SetUtils;
+import com.jeesite.common.collect.MapUtils;
 import com.jeesite.common.lang.DateUtils;
 import com.jeesite.common.lang.ObjectUtils;
 import com.jeesite.common.lang.StringUtils;
@@ -45,11 +49,12 @@ import com.jeesite.common.reflect.ReflectUtils;
 import com.jeesite.common.utils.excel.annotation.ExcelField;
 import com.jeesite.common.utils.excel.annotation.ExcelField.Type;
 import com.jeesite.common.utils.excel.annotation.ExcelFields;
+import com.jeesite.common.utils.excel.fieldtype.FieldType;
 
 /**
  * 导入Excel文件（支持“XLS”和“XLSX”格式）
  * @author ThinkGem
- * @version 2020-2-19
+ * @version 2020-3-5
  */
 public class ExcelImport implements Closeable {
 	
@@ -71,9 +76,9 @@ public class ExcelImport implements Closeable {
 	private int headerNum;
 	
 	/**
-	 * 用于清理缓存
+	 * 存储字段类型临时数据
 	 */
-	private Set<Class<?>> fieldTypes = SetUtils.newHashSet();
+	private Map<Class<? extends FieldType>, FieldType> fieldTypes = MapUtils.newHashMap();
 	
 	/**
 	 * 构造函数
@@ -263,9 +268,9 @@ public class ExcelImport implements Closeable {
 		try{
 			Cell cell = row.getCell(column);
 			if (cell != null){
-				if (cell.getCellTypeEnum() == CellType.NUMERIC){
+				if (cell.getCellType() == CellType.NUMERIC){
 					val = cell.getNumericCellValue();
-					if (HSSFDateUtil.isCellDateFormatted(cell)) {
+					if (DateUtil.isCellDateFormatted(cell)) {
 						val = DateUtil.getJavaDate((Double) val); // POI Excel 日期格式转换
 					}else{
 						if ((Double) val % 1 > 0){
@@ -274,17 +279,17 @@ public class ExcelImport implements Closeable {
 							val = new DecimalFormat("0").format(val);
 						}
 					}
-				}else if (cell.getCellTypeEnum() == CellType.STRING) {
+				}else if (cell.getCellType() == CellType.STRING) {
 					val = cell.getStringCellValue();
-				}else if (cell.getCellTypeEnum() == CellType.FORMULA){
+				}else if (cell.getCellType() == CellType.FORMULA){
 					try {
 						val = cell.getStringCellValue();
 					} catch (Exception e) {
 						FormulaEvaluator evaluator = cell.getSheet().getWorkbook()
 								.getCreationHelper().createFormulaEvaluator();
-						evaluator.evaluateFormulaCellEnum(cell);
+						evaluator.evaluateFormulaCell(cell);
 						CellValue cellValue = evaluator.evaluate(cell);
-						switch (cellValue.getCellTypeEnum()) {
+						switch (cellValue.getCellType()) {
 						case NUMERIC:
 							val = cellValue.getNumberValue();
 							break;
@@ -301,9 +306,9 @@ public class ExcelImport implements Closeable {
 							val = cell.getCellFormula();
 						}
 					}
-				}else if (cell.getCellTypeEnum() == CellType.BOOLEAN){
+				}else if (cell.getCellType() == CellType.BOOLEAN){
 					val = cell.getBooleanCellValue();
-				}else if (cell.getCellTypeEnum() == CellType.ERROR){
+				}else if (cell.getCellType() == CellType.ERROR){
 					val = cell.getErrorCellValue();
 				}
 			}
@@ -318,7 +323,7 @@ public class ExcelImport implements Closeable {
 	 * @param cls 导入对象类型
 	 * @param groups 导入分组
 	 */
-	public <E> List<E> getDataList(Class<E> cls, String... groups) throws InstantiationException, IllegalAccessException{
+	public <E> List<E> getDataList(Class<E> cls, String... groups) throws Exception{
 		return getDataList(cls, false, groups);
 	}
 	
@@ -328,7 +333,7 @@ public class ExcelImport implements Closeable {
 	 * @param isThrowException 遇见错误是否抛出异常
 	 * @param groups 导入分组
 	 */
-	public <E> List<E> getDataList(Class<E> cls, final boolean isThrowException, String... groups) throws InstantiationException, IllegalAccessException{
+	public <E> List<E> getDataList(Class<E> cls, final boolean isThrowException, String... groups) throws Exception{
 		return getDataList(cls, new MethodCallback() {
 			@Override
 			public Object execute(Object... params) {
@@ -348,8 +353,19 @@ public class ExcelImport implements Closeable {
 	 * @param isThrowException 遇见错误是否抛出异常
 	 * @param groups 导入分组
 	 */
-	public <E> List<E> getDataList(Class<E> cls, MethodCallback exceptionCallback, String... groups) throws InstantiationException, IllegalAccessException{
+	@SuppressWarnings("unchecked")
+	public <E> List<E> getDataList(Class<E> cls, MethodCallback exceptionCallback, String... groups) throws Exception{
 		List<Object[]> annotationList = ListUtils.newArrayList();
+		// Get constructor annotation
+		Constructor<?>[] cs = cls.getConstructors();
+		for (Constructor<?> c : cs) {
+			ExcelFields efs = c.getAnnotation(ExcelFields.class);
+			if (efs != null && efs.value() != null){
+				for (ExcelField ef : efs.value()){
+					addAnnotation(annotationList, ef, c, Type.IMPORT, groups);
+				}
+			}
+		}
 		// Get annotation field 
 		Field[] fs = cls.getDeclaredFields();
 		for (Field f : fs){
@@ -378,15 +394,15 @@ public class ExcelImport implements Closeable {
 		Collections.sort(annotationList, new Comparator<Object[]>() {
 			@Override
 			public int compare(Object[] o1, Object[] o2) {
-				return new Integer(((ExcelField)o1[0]).sort()).compareTo(
-						new Integer(((ExcelField)o2[0]).sort()));
+				return Integer.valueOf(((ExcelField)o1[0]).sort()).compareTo(
+						Integer.valueOf(((ExcelField)o2[0]).sort()));
 			};
 		});
 		//log.debug("Import column count:"+annotationList.size());
 		// Get excel data
 		List<E> dataList = ListUtils.newArrayList();
 		for (int i = this.getDataRowNum(); i < this.getLastDataRowNum(); i++) {
-			E e = (E)cls.newInstance();
+			E e = (E)cls.getDeclaredConstructor().newInstance();
 			Row row = this.getRow(i);
 			if (row == null){
 				continue;
@@ -402,7 +418,7 @@ public class ExcelImport implements Closeable {
 					if (StringUtils.isNotBlank(ef.dictType())){
 						try{
 							Class<?> dictUtils = Class.forName("com.jeesite.modules.sys.utils.DictUtils");
-							val = dictUtils.getMethod("getDictValue", String.class, String.class,
+							val = dictUtils.getMethod("getDictValues", String.class, String.class,
 										String.class).invoke(null, ef.dictType(), val.toString(), "");
 						} catch (Exception ex) {
 							log.info("Get cell value ["+i+","+column+"] error: " + ex.toString());
@@ -426,9 +442,9 @@ public class ExcelImport implements Closeable {
 					//log.debug("Import value type: ["+i+","+column+"] " + valType);
 					try {
 						if (StringUtils.isNotBlank(ef.attrName())){
-							if (ef.fieldType() != Class.class){
-								fieldTypes.add(ef.fieldType()); // 先存起来，方便完成后清理缓存
-								val = ef.fieldType().getMethod("getValue", String.class).invoke(null, val);
+							if (ef.fieldType() != FieldType.class){
+								FieldType ft = getFieldType(ef.fieldType());
+								val = ft.getValue(ObjectUtils.toString(val));
 							}
 						}else{
 							if (val != null){
@@ -447,6 +463,8 @@ public class ExcelImport implements Closeable {
 									val = Double.valueOf(val.toString());
 								}else if (valType == Float.class){
 									val = Float.valueOf(val.toString());
+								}else if (valType == BigDecimal.class){
+									val = new BigDecimal(val.toString());
 								}else if (valType == Date.class){
 									if (val instanceof String){
 										val = DateUtils.parseDate(val);
@@ -454,15 +472,15 @@ public class ExcelImport implements Closeable {
 										val = DateUtil.getJavaDate((Double)val); // POI Excel 日期格式转换
 									}
 								}else{
-									if (ef.fieldType() != Class.class){
-										fieldTypes.add(ef.fieldType()); // 先存起来，方便完成后清理缓存
-										val = ef.fieldType().getMethod("getValue", String.class).invoke(null, val.toString());
+									if (ef.fieldType() != FieldType.class){
+										FieldType ft = getFieldType(ef.fieldType());
+										val = ft.getValue(ObjectUtils.toString(val));
 									}else{
 										// 如果没有指定 fieldType，切自行根据类型查找相应的转换类（com.jeesite.common.utils.excel.fieldtype.值的类名+Type）
-										Class<?> fieldType2 = Class.forName(this.getClass().getName().replaceAll(this.getClass().getSimpleName(), 
+										Class<? extends FieldType> fieldType = (Class<? extends FieldType>)Class.forName(this.getClass().getName().replaceAll(this.getClass().getSimpleName(), 
 												"fieldtype."+valType.getSimpleName()+"Type"));
-										fieldTypes.add(fieldType2); // 先存起来，方便完成后清理缓存
-										val = fieldType2.getMethod("getValue", String.class).invoke(null, val.toString());
+										FieldType ft = getFieldType(fieldType);
+										val = ft.getValue(ObjectUtils.toString(val));
 									}
 								}
 							}
@@ -472,6 +490,10 @@ public class ExcelImport implements Closeable {
 						val = null;
 						// 参数：Exception ex, int rowNum, int columnNum
 						exceptionCallback.execute(ex, i, column);
+					}
+					// 导入的数据进行 xss 过滤
+					if (val != null && val instanceof String) {
+						val = EncodeUtils.xssFilter(val.toString());
 					}
 					// set entity value
 					if (StringUtils.isNotBlank(ef.attrName())){
@@ -496,16 +518,22 @@ public class ExcelImport implements Closeable {
 		return dataList;
 	}
 	
+	private FieldType getFieldType(Class<? extends FieldType> fieldType) throws InstantiationException, IllegalAccessException, IllegalArgumentException, InvocationTargetException, NoSuchMethodException, SecurityException {
+		FieldType ft = fieldTypes.get(fieldType);
+		if (ft == null) {
+			ft = fieldType.getDeclaredConstructor().newInstance();
+			fieldTypes.put(fieldType, ft);
+		}
+		return ft;
+	}
+	
 	@Override
-	public void close() {
-		Iterator<Class<?>> it = fieldTypes.iterator();
-		while(it.hasNext()){
-			Class<?> clazz = it.next();
-			try {
-				clazz.getMethod("clearCache").invoke(null);
-			} catch (Exception e) {
-				// 报错忽略，有可能没实现此方法
-			}
+	public void close() throws IOException {
+		fieldTypes.clear();
+		try {
+			wb.close();
+		} catch (IOException e) {
+			e.printStackTrace();
 		}
 	}
 
